--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,10 @@
+
+
+December 7, 2024
+Time: 03:00 PM
+Interview Link: https://teams.microsoft.com/l/meetup-join/19%3ameeting_MzAzYzU2ZmQtZGRmNi00NmYwLWI1ZDgtYTk2MWNkMWMxYTFh%40thread.v2/0?context=%7b%22Tid%22%3a%2263ce7d59-2f3e-42cd-a8cc-be764cff5eb6%22%2c%22Oid%22%3a%2200ca0670-2781-4f3e-8acb-c29dce964c82%22%7d
+
+
 # Editor configuration, see https://editorconfig.org
 root = true
 
